# abeja-platform-cli

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  Pipfile  README.md  pipfile-to-requirements.py  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: cli.yaml
abejacli/: click_custom.py  exceptions.py  fs_utils.py  logger.py  run.py  session.py  version.py
abejacli/bucket/: __init__.py  download_job.py  process_file_job.py  upload_job.py
abejacli/common/: __init__.py
abejacli/config/: __init__.py
abejacli/configuration/: __init__.py  config.py  formatter.py  loader.py
abejacli/datalake/: __init__.py  download_job.py  process_file_job.py  upload_job.py
abejacli/dataset/: __init__.py  commands.py
abejacli/docker/: container_run.py  utils.py
abejacli/docker/commands/: run.py
abejacli/dx_template/: commands.py
abejacli/labs/: commands.py
abejacli/model/: __init__.py  docker_handler.py  local_server_manager.py  runtime_utils.py
abejacli/registry/: commands.py
abejacli/sample_cli/: commands.py
abejacli/secret/: commands.py
abejacli/secret_version/: commands.py
abejacli/startapp/: commands.py
abejacli/task/: __init__.py
abejacli/template/: predict.py-tpl  requirements-local.txt-tpl  train.py-tpl
abejacli/training/: __init__.py  client.py  commands.py  jobs.py
config/: main.py
json-server/: db.json  routes.json
tests/: __init__.py
tests/integration/: abeja_test.py
tests/unit/: __init__.py  click_custom_test.py  fs_utils_test.py  task_test.py  version_test.py
tests/unit/bucket/: bucket_test.py  download_job_test.py  upload_job_test.py
tests/unit/config/: import_config_test.py
tests/unit/configuration/: config_test.py  conftest.py  formatter_test.py  loader_test.py
tests/unit/datalake/: commands_test.py  datalake_test.py  download_job_test.py  process_file_job_test.py  upload_job_test.py
tests/unit/dataset/: commands_test.py  import_dataset_from_datalake_test.py
tests/unit/docker/: container_run_test.py
tests/unit/labs/: commands_test.py
tests/unit/model/: deployment_test.py  docker_handler_test.py  local_server_manager_test.py  runtime_utils_test.py  service_test.py
tests/unit/run/: bucket_test.py  datalake_test.py  run_test.py
tests/unit/secret/: commands_test.py
tests/unit/secret_version/: commands_test.py
tests/unit/training/: init_test.py  (+5 more)
tools/: add_rc_version.py
(+3 files in other folders)
