[tool]
[tool.poetry]
name = "abejacli"
version = "1.0.2"
description = "ABEJA Platform Command line tool"
authors = ["ABEJA Inc. <platform-support@abejainc.com>"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Operating System :: OS Independent"
]
license = "Apache-2.0"
packages = [
    { include = "abejacli" }
]

[tool.poetry.scripts]
abeja = "abejacli.run:main"

[tool.poetry.dependencies]
python = "~=3.5"
cerberus = "~=1.3.0"
click = "~=7.0.0"
click-config-file = "~=0.5.0"
docker = "~=2.5.1"
pygments = ">=2.0"
python-dateutil = "~=2.6.0"
requests = "~=2.18.0"
retrying = "~=1.3.0"
"ruamel.yaml" = "~=0.15.0"
tqdm = "~=4.15.0"
tomlkit = "^0.5.11"

[tool.poetry.dev-dependencies]
autoflake = "==0.7"
autopep8 = "==1.3.2"
"backports.tempfile" = "==1.0"
coverage = "==4.4.1"
flake8 = "==3.4.1"
mock = "==2.0.0"
nose = "==1.3.7"
parameterized = "==0.6.1"
pyfakefs = ">=3.5"
pylint = "*"
pytest = "*"
pytest-cov = "*"
requests-mock = "==1.3.0"
